# mpvremote

./: .env.example  README.md  controller.py  mpvremote.service  pyproject.toml  run-web.sh
arduino_receiver/: arduino_receiver.ino
src/mpvremote/: classes.py  cli.py  config.py  controller.py  irlistener.py  metadata.py  mpv.py  searchclient.py  web.py  webserver.py  wsgi.py
src/mpvremote/templates/: index.html
